--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "express",
-  "version": "0.0.0",
+  "name": "exprest-mongo-mysql-psql",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
