add cross-env support and update readme

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:mysql": "DB=mysql node ./bin/www",
-    "start:postgresql": "DB=postgresql node ./bin/www",
-    "start:mongodb": "DB=mongodb node ./bin/www"
+    "start:mysql": "cross-env DB=mysql node ./bin/www",
+    "start:postgresql": "cross-env DB=postgresql node ./bin/www",
+    "start:mongodb": "cross-env DB=mongodb node ./bin/www"
   },
   "dependencies": {
     "bluebird": "~3.5.1",
     "cookie-parser": "~1.4.3",
+    "cross-env": "^5.1.6",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
